[package]
name = "maphub-core"
version = "0.1.0"
authors = ["RE <re_dev@qq.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
quick-xml = "0.38.4"
anyhow = "1.0.100"
prost = "0.14.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
criterion = { version = "0.7", features = ["html_reports"] }

[build-dependencies]
prost-build = "0.14.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
